--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@0.1.2
+  s3: circleci/s3@1.0.15
 
 jobs:
   build:
@@ -22,3 +23,22 @@ jobs:
           root: .
           paths:
             - _site
+  deploy:
+    docker:
+      - image: circleci/python:3.6
+    executor: aws-cli/default
+    steps:
+      - attach_workspace:
+          at: .
+      - aws-s3/sync:
+          from: _site
+          overwrite: true
+          to: 's3://jfredrickson-static-test/'
+
+workflows:
+  continuous_deployment:
+    jobs:
+      - build
+      - deploy
+          requires:
+            - build
