--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,6 @@ workflows:
   continuous_deployment:
     jobs:
       - build
-      - deploy
+      - deploy:
           requires:
             - build
