--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,12 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@0.1.2
-  s3: circleci/s3@1.0.15
+  s3: circleci/aws-s3@1.0.15
 
 jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.5
-    executor: ruby/default
     steps:
       - checkout
       - run:
@@ -26,11 +25,10 @@ jobs:
   deploy:
     docker:
       - image: circleci/python:3.6
-    executor: aws-cli/default
     steps:
       - attach_workspace:
           at: .
-      - aws-s3/sync:
+      - s3/sync:
           from: _site
           overwrite: true
           to: 's3://jfredrickson-static-test/'
