--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@0.1.2
+  ruby: circleci/ruby@0.2.2
   s3: circleci/aws-s3@1.0.15
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
           name: Install bundler
           command: gem install bundler
       - ruby/load-cache
-      - ruby/bundle-install
+      - ruby/install-deps
       - ruby/save-cache
       - run:
           name: Jekyll build
